src/objects/Member_Information__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Members Information</relationshipLabel>
        <relationshipName>Members_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Insurance_Provider_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Insurance Provider Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Member_Information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Member Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Behavioral_Condition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Behavioral Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EHub_Update_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Update eligibility hub api. Based on this value, system calls service.</description>
        <label>Eligibility Hub Update Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender of member</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Contact_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Contact Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Member_ID__c</fullName>
        <description>Unique Individual / Member Information identifier from legacy system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Legacy Member ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <description>Mailing Address of Member</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mailing Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Condition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newly_Diagnosed_Date__c</fullName>
        <description>Date member was newly diagnosed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Newly Diagnosed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Newly_Diagnosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newly Diagnosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onshore_Restriction__c</fullName>
        <description>Used to indicate if the group has an Onshore Restriction. If Yes then only Onshore agents can view the records. If No then onshore and offshore agents can view the records</description>
        <label>Onshore Restriction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Preferred Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Associations__c</fullName>
        <description>Used if the member is aligned to any specific programs</description>
        <label>Program Associations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complex Care_Children&apos;s Hospital of Orange County</fullName>
                </value>
                <value>
                    <fullName>Complex Care_Children&apos;s National</fullName>
                </value>
                <value>
                    <fullName>Complex Care_Pediatric Home Services</fullName>
                </value>
                <value>
                    <fullName>Complex Care_Phoenix Children&apos;s Care Network</fullName>
                </value>
                <value>
                    <fullName>Complex Care_Seattle Children&apos;s Care Network</fullName>
                </value>
                <value>
                    <fullName>Complex Care_UPMC Children&apos;s Hospital of Pittsburgh</fullName>
                </value>
                <value>
                    <fullName>Condition Specific_Cleveland Clinic</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Odyssey_Boston Children’s</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Odyssey_Children&apos;s National</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Odyssey_Genomics</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Odyssey_Mayo</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Odyssey_Rady</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Odyssey_St. Louis Children&apos;s at Washington University</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Odyssey_Texas Children&apos;s</fullName>
                </value>
                <value>
                    <fullName>Neonatal Resource Services (NRS)</fullName>
                </value>
                <value>
                    <fullName>Neurodegenerative</fullName>
                </value>
                <value>
                    <fullName>Picnic Health</fullName>
                </value>
                <value>
                    <fullName>Rare Conditions_University of Southern California</fullName>
                </value>
                <value>
                    <fullName>Serious Illness Support</fullName>
                </value>
                <value>
                    <fullName>Diagnostics Odyssey_St. Louis Children&apos;s at Washington University</fullName>
                    <isActive>false</isActive>
                    <label>Diagnostics Odyssey_St. Louis Children&apos;s at Washington University</label>
                </value>
                <value>
                    <fullName>Provider Services Recognition</fullName>
                    <isActive>false</isActive>
                    <label>Provider Services Recognition</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UHG_Restriction__c</fullName>
        <description>Used to indicate if group has an Onshore restriction and to limit visibility of records</description>
        <label>UHG Restriction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Member Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Members Information</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Sharing_the_associated_Documents__c</fullName>
        <label>Sharing the associated Documents</label>
    </sharingReasons>
    <validationRules>
        <fullName>Member_Information_Name_read_only</fullName>
        <active>true</active>
        <description>Makes Member Information Name read only for the Family Engagement Center profile.</description>
        <errorConditionFormula>AND( ISCHANGED( Name ) , $User.Profile_Name__c = &apos;Center for Health Navigation&apos;)</errorConditionFormula>
        <errorMessage>You do not have permission to edit the Member Information Name</errorMessage>
    </validationRules>
</CustomObject>